Добавлет секцию статистики и список друзей

--- a/src/components/SocialProfile/SocialProfile.module.css
+++ b/src/components/SocialProfile/SocialProfile.module.css
@@ -4,6 +4,7 @@
     border-radius: 15px;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 30px;
     background-color: #ffffff;
     text-align: center;
 }
